# Work-1-Novokovskiy

Новоковский Дмитрий/: CMakeLists.txt  README.md
Новоковский Дмитрий/data/: products.txt
Новоковский Дмитрий/src/: FileIO.cpp  FileIO.h  Menu.cpp  Menu.h  Product.cpp  Product.h  Warehouse.cpp  Warehouse.h  main.cpp
